--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     setInterval(updateTimer, 1000);
     updateTimer();
 
-    const emojis = ["🐱", "🐭", "🦬", "✝️", "🦙"];
+    const emojis = ["🐱", "🐭", "🦬", "✈️", "🦙", "🚌"];
     for (let i = 0; i < 25; i++) {
       const el = document.createElement("div");
       el.className = "flying";
